--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/play_text" />
 
+        <TextView
+            android:id="@+id/levels_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto_black"
+            android:text="LIVELLI"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="15sp"
+            android:typeface="normal"
+            app:layout_constraintEnd_toEndOf="@+id/levels_button"
+            app:layout_constraintStart_toStartOf="@+id/levels_button"
+            app:layout_constraintTop_toBottomOf="@+id/levels_button" />
+
         <ImageButton
             android:id="@+id/settings_button"
             android:layout_width="60dp"
@@ -116,13 +131,28 @@
             app:layout_constraintStart_toEndOf="@+id/levels_button"
             app:layout_constraintTop_toBottomOf="@+id/play_text" />
 
+        <TextView
+            android:id="@+id/levels_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto_black"
+            android:text="OPZIONI"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="15sp"
+            android:typeface="normal"
+            app:layout_constraintEnd_toEndOf="@+id/settings_button"
+            app:layout_constraintStart_toStartOf="@+id/settings_button"
+            app:layout_constraintTop_toBottomOf="@+id/settings_button" />
+
         <Button
             android:id="@+id/tutorial_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/roboto_black"
-            android:text="Tutorial"
+            android:text="TUTORIAL"
             app:cornerRadius="50dp"
             app:iconTint="#03A9F4"
             app:layout_constraintBottom_toBottomOf="parent"
