--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-</resources>
+    <color name="md_theme_light_primary">#006491</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#C7E6FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001E30</color>
+    <color name="md_theme_light_secondary">#845400</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDDB2</color>
+    <color name="md_theme_light_onSecondaryContainer">#2A1800</color>
+    <color name="md_theme_light_tertiary">#944B00</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDCC3</color>
+    <color name="md_theme_light_onTertiaryContainer">#301400</color>
+    <color name="md_theme_light_error">#B3261E</color>
+    <color name="md_theme_light_errorContainer">#F9DEDC</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410E0B</color>
+    <color name="md_theme_light_background">#FFFBF7</color>
+    <color name="md_theme_light_onBackground">#1E1B16</color>
+    <color name="md_theme_light_surface">#FFFBF7</color>
+    <color name="md_theme_light_onSurface">#1E1B16</color>
+    <color name="md_theme_light_surfaceVariant">#E7E0EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#49454F</color>
+    <color name="md_theme_light_outline">#79747E</color>
+    <color name="md_theme_light_inverseOnSurface">#F7F0E7</color>
+    <color name="md_theme_light_inverseSurface">#33302A</color>
+    <color name="md_theme_light_inversePrimary">#85CEFF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_primaryInverse">#85CEFF</color>
+    <color name="md_theme_dark_primary">#85CEFF</color>
+    <color name="md_theme_dark_onPrimary">#00344E</color>
+    <color name="md_theme_dark_primaryContainer">#004C6F</color>
+    <color name="md_theme_dark_onPrimaryContainer">#C7E6FF</color>
+    <color name="md_theme_dark_secondary">#FFB951</color>
+    <color name="md_theme_dark_onSecondary">#462A00</color>
+    <color name="md_theme_dark_secondaryContainer">#643F00</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDDB2</color>
+    <color name="md_theme_dark_tertiary">#FFB77E</color>
+    <color name="md_theme_dark_onTertiary">#4F2500</color>
+    <color name="md_theme_dark_tertiaryContainer">#703800</color><color name="md_theme_dark_onTertiaryContainer">#FFDCC3</color><color name="md_theme_dark_error">#F2B8B5</color><color name="md_theme_dark_errorContainer">#8C1D18</color><color name="md_theme_dark_onError">#601410</color><color name="md_theme_dark_onErrorContainer">#F9DEDC</color><color name="md_theme_dark_background">#1E1B16</color><color name="md_theme_dark_onBackground">#E8E2D9</color><color name="md_theme_dark_surface">#1E1B16</color><color name="md_theme_dark_onSurface">#E8E2D9</color><color name="md_theme_dark_surfaceVariant">#49454F</color><color name="md_theme_dark_onSurfaceVariant">#CAC4D0</color><color name="md_theme_dark_outline">#938F99</color><color name="md_theme_dark_inverseOnSurface">#1E1B16</color><color name="md_theme_dark_inverseSurface">#E8E2D9</color><color name="md_theme_dark_inversePrimary">#006491</color><color name="md_theme_dark_shadow">#000000</color><color name="md_theme_dark_primaryInverse">#006491</color></resources>
