--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -60,7 +60,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <fo.pigdm.colors2048.view.colorPaletteView
+            android:id="@+id/colorPaletteView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+        </fo.pigdm.colors2048.view.colorPaletteView>
+
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
@@ -139,6 +147,7 @@
                 app:srcCompat="@mipmap/ic_launcher_background"
                 app:tint="#000000" />
         </LinearLayout>
+        -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
