implementazione popup gioco vinto e perso implementazione lista livelli dinamica nella sezione da aggiungere interattività con le schede

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
             android:fontFamily="@font/roboto_black"
-            android:text="PUNTEGGIO"
+            android:text="@string/score_text"
             android:textSize="16sp"
             android:typeface="sans"
             app:layout_constraintEnd_toStartOf="@+id/textView"
@@ -48,6 +48,7 @@
             android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:onClick="startMainActivity"
             app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
         <ImageButton
