--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -8,6 +8,7 @@
     tools:context=".view.LevelsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/levels_rec_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
