--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="16dp"
+            android:onClick="startLevelsActivity"
             android:src="@android:drawable/btn_star"
             app:layout_constraintBottom_toTopOf="@+id/tutorial_button"
             app:layout_constraintEnd_toStartOf="@+id/settings_button"
