--- a/app/src/main/res/layout/level_card_layout.xml
+++ b/app/src/main/res/layout/level_card_layout.xml
@@ -23,12 +23,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:padding="5dp"
             app:srcCompat="@color/level_test_color1" />
 
         <TextView
             android:id="@+id/level_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/level_image"
             android:layout_marginStart="10dp"
@@ -41,7 +40,7 @@
 
         <TextView
             android:id="@+id/level_description"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/level_name"
             android:layout_marginStart="10dp"
@@ -57,13 +56,14 @@
 
         <TextView
             android:id="@+id/level_selected"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/level_description"
+            android:layout_alignBaseline="@id/level_name"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_alignParentRight="true"
             android:fontFamily="@font/roboto"
             android:text="LIVELLO SELEZIONATO"
             android:textColor="@color/md_theme_dark_onPrimary"
