--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -26,15 +26,14 @@
         <item>Dimensione Palette: 10 Colori</item>
         <item>Dimensione Palette: 11 Colori</item>
     </string-array>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="level_preview_image">
+        <item>ic_palettelev1</item>
+        <item>ic_palettelev1</item>
+        <item>ic_palettelev1</item>
+        <item>ic_palettelev1</item>
+        <item>ic_palettelev1</item>
+        <item>ic_palettelev1</item>
     </string-array>
 
 </resources>
