aggiunta musica background su gameactivity aggiunte tutte le immagini di preview delle palette

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -9,7 +9,7 @@
             app:key="level"
             app:title="@string/levels_title"
             app:useSimpleSummaryProvider="true"
-            app:isPreferenceVisible="true"/>
+            app:isPreferenceVisible="false"/>
 
     </PreferenceCategory>
 
