--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,8 +13,17 @@
         android:layout_gravity="top"
         android:layout_weight="3">
 
+        <fo.pigdm.colors2048.view.ColorPaletteView
+            android:id="@+id/colorPaletteView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </fo.pigdm.colors2048.view.ColorPaletteView>
+
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -36,9 +45,10 @@
             android:text="@string/score_text"
             android:textSize="16sp"
             android:typeface="sans"
-            app:layout_constraintEnd_toStartOf="@+id/textView"
+            app:layout_constraintEnd_toStartOf="@+id/title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -46,9 +56,9 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
+            android:onClick="startMainActivity"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:onClick="startMainActivity"
             app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
         <ImageButton
@@ -56,8 +66,10 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
+            android:onClick="startSettingsActivity"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/imageButton"
-            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/title"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
@@ -66,23 +78,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_black"
-            android:text="LIVELLO TEST superfacile"
+            android:text="..........."
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.32" />
+            app:layout_constraintVertical_bias="0.32"
+            android:visibility="gone"/>
 
-        <fo.pigdm.colors2048.view.ColorPaletteView
-            android:id="@+id/colorPaletteView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        </fo.pigdm.colors2048.view.ColorPaletteView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
